--- a/styles.less
+++ b/styles.less
@@ -1066,7 +1066,8 @@ form{float:left;width:100%;display:block;padding:40px 15px;}
 .tab-5{
 	li{width:20%;}
 }
-.tab-content{float:left;width:100%;margin-bottom:40px;
+.tab-content{float:left;width:100%;
+	// margin-bottom:40px;
 	.content{
 		height:300px;
 		background:@white;
